<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Just Do It</string>
    <string name="Help">What can I help you with?</string>
    <string name="HelpExample">(Eg. pizza, taxi, gas cylinder)</string>
    <string name="action_settings">Settings</string>
    <string name="delivery_address_prefix">Deliver to</string>
    <string name="bot_checkbox">Create bot for this order</string>
    <string name="order_button">Order</string>
    <string name="recent_bot_textbox">Your recent bot</string>

</resources>
