<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity">

    <TextView
        android:text="@string/Help"
        android:id="@+id/helpTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="16dp"
        android:fontFamily="sans-serif-light"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:text="@string/HelpExample"
        android:id="@+id/helpExampleTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/helpTextBox"
        android:textSize="12dp"
        android:fontFamily="sans-serif-light"
        android:layout_centerHorizontal="true" />

    <EditText
        android:hint="@string/HelpExample"
        android:id="@+id/providerTextBox"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:drawableLeft="@drawable/ic_launcher"
        android:drawablePadding="5dp"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/helpExampleTextBox"
        android:layout_margin="24dp"
        android:textSize="14dp"
        android:padding="8dp"
        android:background="@drawable/normaltextboxstyle"
        android:fontFamily="sans-serif-light"/>

    <RelativeLayout
        android:layout_below="@+id/providerTextBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:hint="@string/HelpExample"
            android:id="@+id/orderedItemsTextBox"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_margin="24dp"
            android:textSize="14dp"
            android:padding="8dp"
            android:background="@drawable/confirmeditemtextboxstyle"
            android:fontFamily="sans-serif-light"/>

        <TextView
            android:id="@+id/deliveryAddressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/orderedItemsTextBox"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textSize="14dp"
            android:padding="8dp"
            android:text="@string/delivery_address_prefix"
            android:fontFamily="sans-serif-light"/>

        <CheckBox
            android:id="@+id/botCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/deliveryAddressTextView"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textSize="14dp"
            android:padding="8dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:text="@string/bot_checkbox"
            android:fontFamily="sans-serif-light"/>

        <Button
            android:id="@+id/orderbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/botCheckbox"
            android:textSize="14dp"
            android:background="@drawable/orderbutton"
            android:layout_centerHorizontal="true"
            android:text="@string/order_button"
            android:fontFamily="sans-serif-light"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/providerTextBox"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/recentbotTextbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textSize="14dp"
            android:padding="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/recent_bot_textbox"
            android:fontFamily="sans-serif-light"/>

    </RelativeLayout>

</RelativeLayout>
